# OdinSight

./: .clang-format  .gitignore  CMakeLists.txt  README.md  makefile
app/: CMakeLists.txt
app/daemon/: CMakeLists.txt  main.cpp
app/epoll_test/: CMakeLists.txt  main.cpp
app/launcher/: CMakeLists.txt  main.cpp
app/socket/: CMakeLists.txt  main.cpp
ebpf/include/: ebpf_types.h
include/common/: Error.hpp  GameID.hpp  Protocol.hpp  Result.hpp
include/system/: CGroup.hpp  FD.hpp
src/: CMakeLists.txt
src/daemon/: CMakeLists.txt  OdinEngine.cpp  OdinEngine.hpp
src/daemon/control/: CommandListener.cpp
src/daemon/control/include/: CommandListener.hpp
src/daemon/events/: LaunchEvent.cpp
src/daemon/execution/: CMakeLists.txt  Runner.cpp
src/daemon/execution/include/: Runner.hpp
src/daemon/gateway/: CMakeLists.txt
src/daemon/launcher/: CMakeLists.txt  CommandListener.cpp  GLauncher.cpp  GameWhitelist.cpp  LaunchRequestReceiver.cpp  Runner.cpp
src/daemon/launcher/include/: CommandListener.hpp  Context.hpp  GLauncher.hpp  GameWhitelist.hpp  LContext.hpp  LaunchRequestReceiver.hpp  Runner.hpp
src/daemon/monitor/ebpf/: EbpfManager.cpp
src/daemon/monitor/ebpf/hooks/: CMakeLists.txt
src/daemon/monitor/ebpf/include/: Ebpf.h  EbpfManager.hpp  IEbpfModule.hpp
src/daemon/monitor/ebpf/modules/: SyscallModule.cpp  SyscallModule.hpp
src/daemon/monitor/ebpf_manager/: CMakeLists.txt  EbpfManager.cpp
src/daemon/monitor/ebpf_manager/include/: EbpfManager.hpp  IEbpfModule.hpp
src/daemon/monitor/ebpf_manager/modules/: SyscallModule.cpp
src/daemon/monitor/ebpf_manager/modules/include/: SyscallModule.hpp
src/daemon/session/: CMakeLists.txt  ExitHandler.cpp  StartupHandler.cpp
src/daemon/session/include/: ExitHandler.hpp  StartupHandler.hpp
src/health_checker/: CMakeLists.txt  HealthChecker.cpp
src/health_checker/include/: HealthChecker.hpp
src/security_monitor/: EnvironmentValidator.cpp
src/security_monitor/include/: EnvironmentValidator.hpp
src/security_monitor/probes/: UnsignedKernelModuleProbe.cpp
src/system/: CGroupService.cpp  CMakeLists.txt  EPollBinding.cpp  EPollManager.cpp  IdentityService.cpp
src/system/include/: CGroupService.hpp  EPollBinding.hpp  EPollManager.hpp  IdentityService.hpp
tests/daemon/: CMakeLists.txt  integration_tests.cpp
